# job-analytics-pipeline

./: .pre-commit-config.yaml  PLAN_NEW_SCRAPERS.md  PLAYWRIGHT_SCRAPERS.md  PROGRESS.md  README.md  config.example.py  config_enriched.yaml  config_with_types.yaml  enrich_all.py  ex_config.yaml  fetch_json.py  fingerprinting.py  jobs.py  log_utils.py  modify_yaml.py  pyproject.toml  repomix-output.xml  scrape_eu_temp_agents.py  scrape_log.json  scraper_registry.example.py  test_playwright_scrapers.py  test_scrapers.py
.github/workflows/: lint.yml  tests.yml
enrichment/: config.py  enrich.py  fetcher.py  org_config.example.py  runner.py  schema.py
ops/: WORKFLOW.md  run_orgs.py
ops/harness/: WORKFLOW.md  batches.py  enrichment_matrix.py  playwright_matrix.py  quality_gates.py  quality_gates.yaml  run_batch.py  scraper_matrix.py
ops/reports/: README.md
ops/reports/batches/: B01.md
scrapers/: base.py  scrape_example.py
scrapers_playwright/: __init__.py  base_pw.py  scrape_example_pw.py
tests/: README.md  conftest.py  test_config.py  test_config_local.py.example
tests/contract/: test_artifact_quality.py  test_batch_b01_contract.py  test_batch_b02_contract.py  test_batch_b03_contract.py
tests/fixtures/: quality_gates.py  quality_gates.yaml
tests/fixtures/orgs/: README.md
tests/integration/: test_artifact_schema.py  test_batch_b01_integration.py  test_batch_b02_integration.py  test_batch_b03_integration.py
tests/unit/: test_base_fetch_retry.py  test_batch_quality_helpers.py  test_fetcher_utils.py  test_quality_gate_helpers.py  test_runner_logging.py
(+3 files in other folders)
