[project]
name = "scrape"
version = "0.1.0"
description = "Job vacancy scrapers"
readme = "PLAN_NEW_SCRAPERS.md"
requires-python = "==3.13.*"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "playwright>=1.58.0",
  "pyinstrument>=5.1.1",
  "pyyaml>=6.0.2",
  "pytest>=8.3.5",
  "requests>=2.32.3",
  "urllib3>=2.2.0",
  "apache-airflow>=3.1.7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "unit: fast deterministic unit tests",
  "contract: artifact-based contract tests for run quality",
  "integration: offline integration tests for artifact schema and flow",
  "artifact: tests that validate generated run artifacts",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]
